// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - OpenAPI Client Spring: microservice petstore custom endpoint  should match files snapshot 1`] = `
{
  ".openapi-generator-ignore": {
    "contents": "pom.xml
README.md
package.json
",
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "microservice",
    "baseName": "sampleOpenApiClient",
    "packageName": "com.mycompany.myapp",
    "packageFolder": "com/mycompany/myapp",
    "serverPort": "8081",
    "authenticationType": "jwt",
    "cacheProvider": "ehcache",
    "enableHibernateCache": true,
    "websocket": "no",
    "databaseType": "sql",
    "devDatabaseType": "h2Memory",
    "prodDatabaseType": "mysql",
    "searchEngine": "no",
    "messageBroker": "no",
    "serviceDiscoveryType": "consul",
    "buildTool": "maven",
    "enableSwaggerCodegen": true,
    "jwtSecretKey": "Y2Q4NzYwMzEwMzNiZTExYzI1Y2E2Yjg2MGViNjRjMGE2YjcwNTEzY2ZkMDgxNTYwNTUxZWJjMzJhYjUwY2JiOTBiNjk3YWExMWRiNWM0MDljOTJhN2M2ODBkZDY5MjQ4MTVhYmUyZGUwYjFiODE1YmFhMTE0MjY2NDRiZDI5NDI=",
    "testFrameworks": [],
    "enableTranslation": false,
    "skipClient": true,
    "skipUserManagement": true
  }
}
",
    "stateCleared": "modified",
  },
  "package.json": {
    "contents": "{
  "scripts": {
    "openapi-client:petstore": "openapi-generator-cli generate -g spring -i petstore-openapi-3.yml -p library=spring-cloud -p apiPackage=com.mycompany.myapp.client.petstore.api -p modelPackage=com.mycompany.myapp.client.petstore.model -p basePackage=com.mycompany.myapp.client -p configPackage=com.mycompany.myapp.client.petstore -p title=petstore -p artifactId=petstore -p supportingFiles=ApiKeyRequestInterceptor.java --skip-validate-spec"
  },
  "dependencies": {
    "@openapitools/openapi-generator-cli": "2.5.1"
  }
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - OpenAPI Client Spring: microservice petstore regenerate  should match files snapshot 1`] = `
{
  ".openapi-generator-ignore": {
    "contents": "pom.xml
README.md
package.json
",
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "microservice",
    "baseName": "sampleOpenApiClient",
    "packageName": "com.mycompany.myapp",
    "packageFolder": "com/mycompany/myapp",
    "serverPort": "8081",
    "authenticationType": "jwt",
    "cacheProvider": "ehcache",
    "enableHibernateCache": true,
    "websocket": "no",
    "databaseType": "sql",
    "devDatabaseType": "h2Memory",
    "prodDatabaseType": "mysql",
    "searchEngine": "no",
    "messageBroker": "no",
    "serviceDiscoveryType": "consul",
    "buildTool": "maven",
    "enableSwaggerCodegen": true,
    "jwtSecretKey": "Y2Q4NzYwMzEwMzNiZTExYzI1Y2E2Yjg2MGViNjRjMGE2YjcwNTEzY2ZkMDgxNTYwNTUxZWJjMzJhYjUwY2JiOTBiNjk3YWExMWRiNWM0MDljOTJhN2M2ODBkZDY5MjQ4MTVhYmUyZGUwYjFiODE1YmFhMTE0MjY2NDRiZDI5NDI=",
    "testFrameworks": [],
    "enableTranslation": false,
    "skipClient": true,
    "skipUserManagement": true,
    "openApiClients": {
      "petstore": {
        "spec": "petstore-openapi-3.yml",
        "generatorName": "spring"
      }
    }
  }
}
",
    "stateCleared": "modified",
  },
  "package.json": {
    "contents": "{
  "scripts": {
    "openapi-client:petstore": "openapi-generator-cli generate -g spring -i petstore-openapi-3.yml -p library=spring-cloud -p apiPackage=com.mycompany.myapp.client.petstore.api -p modelPackage=com.mycompany.myapp.client.petstore.model -p basePackage=com.mycompany.myapp.client -p configPackage=com.mycompany.myapp.client.petstore -p title=petstore -p artifactId=petstore -p supportingFiles=ApiKeyRequestInterceptor.java --skip-validate-spec"
  },
  "dependencies": {
    "@openapitools/openapi-generator-cli": "2.5.1"
  }
}
",
    "stateCleared": "modified",
  },
}
`;
